added user login and register

--- a/VaultBlazor/appsettings.json
+++ b/VaultBlazor/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "VaultDb": "Server=localhost\\SQLEXPRESS;Database=Vault;Trusted_Connection=True;Integrated Security=True;TrustServerCertificate=True"
+  }
 }
